<resources>
    <string name="app_name">StudentHelper</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already have an account? Log in!</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">No account yet? Register now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="enter">Enter the app!</string>
    <string name="title_activity_first_page">FirstPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Google Classroom</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Comunicate</string>
    <string name="grades">Grades</string>
    <string name="Google_classroom">Google Classroom</string>
    <string name="time_table">Time Table</string>
    <string name="welcome_user">Welcome!</string>
</resources>