<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/time_table"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/time_table" />
        <item
            android:id="@+id/google_classroom"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="@string/Google_classroom" />
        <item
            android:id="@+id/grades"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/grades" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
